Adding style.css to styles/ and index.js to assets/ and modified index.html with that changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Quire - NoteBook</title>
-     <link rel="stylesheet" href="style.css"><!-- Main style -->
+     <link rel="stylesheet" href="styles/style.css"><!-- Main style -->
+     <script src="assets/index.js" defer></script><!-- Main js -->
 </head>
 
 <body>
