--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
      <title>Quire - NoteBook</title>
      <link rel="stylesheet" href="styles/style.css"><!-- Main style -->
      <script src="assets/index.js" defer></script><!-- Main js -->
+     <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script>
+     <script src="assets/ckeditor.js" defer></script><!-- Main js -->
+
 </head>
 
 <body>
      <h1>Welcome to Quire</h1>
+     <!-- The toolbar will be rendered in this container. -->
+     <div id="toolbar-container"></div>
+
+     <!-- This container will become the editable. -->
+     <div id="editor">
+     </div>
 </body>
 
 </html>
