--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Quire - NoteBook</title>
      <link rel="stylesheet" href="styles/style.css"><!-- Main style -->
-     <link rel="stylesheet" href="styles/quill.snow.css">
      <script src="assets/index.js" defer></script><!-- Main js -->
      <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script>
      <script src="assets/ckeditor.js" defer></script><!-- Main js -->
@@ -14,12 +13,34 @@
 </head>
 
 <body>
-     <h1>Welcome to Quire</h1>
-     <!-- The toolbar will be rendered in this container. -->
-     <div id="toolbar-container"></div>
+     <div id="left">
+          <h1>Titles!</h1>
+     </div>
+     <div id='right'>
+          <h1>Welcome to Quire</h1>
+          <p>Write your note!</p>
+          <label>Title: </label>
+          <br>
 
-     <!-- This container will become the editable. -->
-     <div id="editor">
+          <input type="text" id="note-title">
+          <br>
+          <label>Note:
+
+          </label>
+          <!-- The toolbar will be rendered in this container. -->
+          <div id="toolbar-container"></div>
+
+          <!-- This container will become the editable. -->
+          <div id="editor">
+               <textarea id="textArea"></textarea>
+          </div>
+          <button id="save-btn">Save</button>
+          <button id="load-btn">Load</button>
+          <div id="showAllNotes">
+               <ul id="note-list">
+
+               </ul>
+          </div>
      </div>
 </body>
 
