--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
      <div id="left">
           <h1>Titles!</h1>
+          <div class="allTitles"></div>
      </div>
      <div id='right'>
           <h1>Welcome to Quire</h1>
@@ -27,13 +28,15 @@
           <label>Note:
 
           </label>
+
           <!-- The toolbar will be rendered in this container. -->
           <div id="toolbar-container"></div>
 
           <!-- This container will become the editable. -->
           <div id="editor">
-               <textarea id="textArea"></textarea>
+               
           </div>
+
           <button id="save-btn">Save</button>
           <button id="load-btn">Load</button>
           <div id="showAllNotes">
