--- a/index.html
+++ b/index.html
@@ -13,38 +13,36 @@
 </head>
 
 <body>
-     <div id="left">
-          <h1>Titles!</h1>
-          <div class="allTitles"></div>
-     </div>
-     <div id='right'>
-          <h1>Welcome to Quire</h1>
-          <p>Write your note!</p>
-          <label>Title: </label>
-          <br>
-
-          <input type="text" id="note-title">
-          <br>
-          <label>Note:
-
-          </label>
-
-          <!-- The toolbar will be rendered in this container. -->
-          <div id="toolbar-container"></div>
-
-          <!-- This container will become the editable. -->
-          <div id="editor">
-               
+     <main>
+          <div id="left">
+               <h1>Saved Notes!</h1>
+               <div class="allTitles"></div>
           </div>
-
-          <button id="save-btn">Save</button>
-          <button id="load-btn">Load</button>
-          <div id="showAllNotes">
-               <ul id="note-list">
-
-               </ul>
+          <div id='right'>
+               <h1>Welcome to Quire</h1>
+               <h6>Write your note!</h6>
+               <br>
+               <label>Title: </label>
+               <br>
+               <input type="text" id="note-title">
+               <br>
+               <br>
+               <label>Note:
+               </label>
+               <!-- The toolbar will be rendered in this container. -->
+               <div id="toolbar-container"></div>
+               <!-- This container will become the editable. -->
+               <div id="editor">
+                    <textarea id="testIt"></textarea>
+               </div>
+               <button id="save-btn">Save</button>
+               <button id="load-btn">Load</button>
+               <div id="showAllNotes">
+                    <ul id="note-list"></ul>
+               </div>
           </div>
-     </div>
+     </main>
+
 </body>
 
 </html>
