--- a/index.html
+++ b/index.html
@@ -13,19 +13,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-     <h1>Welcome to Quire</h1>
-
-     <h1>Testing</h1>
-
-     <!-- The toolbar will be rendered in this container. -->
-     <div id="toolbar-container"></div>
-
-     <!-- This container will become the editable. -->
-     <div id="editor">
-     </div>
-
-=======
      <main>
           <div id="left">
                <h1>Saved Notes!</h1>
@@ -49,14 +36,13 @@
                     <textarea id="testIt"></textarea>
                </div>
                <button id="save-btn">Save</button>
-               <button id="load-btn">Load</button>
+               <button id="delete-btn">Delete</button>
                <div id="showAllNotes">
                     <ul id="note-list"></ul>
                </div>
           </div>
      </main>
 
->>>>>>> 5d2ac60a8f794df832a6ae4bc8bef6b383b0cc0a
 </body>
 
 </html>
