Adding more functionality.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
      <script src="assets/index.js" defer></script><!-- Main js -->
      <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script>
      <script src="assets/ckeditor.js" defer></script><!-- Main js -->
+     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Noto+Sans+JP:wght@300&display=swap"
+          rel="stylesheet">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js " defer></script>
 
 </head>
@@ -42,6 +44,8 @@
                <button id="delete-btn">Delete</button>
 
           </div>
+          
+          <div id="info"></div>
      </main>
 
 </body>
