--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
      <main>
           <div id="left">
                <h1>Saved Notes!</h1>
-               <div class="allTitles"></div>
+               <input id="search-note" type="text">
+               <div id="allTitles"></div>
           </div>
           <div id='right'>
                <h1>Welcome to Quire</h1>
