--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
      <link rel="stylesheet" href="styles/style.css"><!-- Main style -->
      <link rel="stylesheet" href="styles/menu.css"><!-- sidebar menu-->
      <script src="assets/index.js" defer></script><!-- Main js -->
-     <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script>
-     <script src="assets/ckeditor.js" defer></script><!-- Main js -->
+     <!-- <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script> -->
+     <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/balloon/ckeditor.js"></script>
+     <script src="assets/myCkeditor.js" defer></script><!-- The text-Editor js -->
      <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Noto+Sans+JP:wght@300&display=swap"
           rel="stylesheet">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js " defer></script>
@@ -64,12 +65,24 @@
                <br>
                <label>Note:
                </label>
-               <!-- The toolbar will be rendered in this container. -->
+
+               <div id="editor">
+               </div>
+
+               <!-- The toolbar will be rendered in this container. 
                <div id="toolbar-container"></div>
-               <!-- This container will become the editable. -->
+                This container will become the editable. 
+               <textarea name="editor1"></textarea>
+                <script>
+                    ed.replace('editor1');
+               </script> 
+
+                The toolbar will be rendered in this container. 
+               <div id="toolbar-container"></div>
+                This container will become the editable. 
                <div id="editor">
                     <textarea id="testIt"></textarea>
-               </div>
+               </div> -->
                <button id="save-btn">Save</button>
                <button id="delete-btn">Delete</button>
 
