--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                <div id="editor">
                </div>
-
+               <div id="snippet-markdown"></div>
                <!-- The toolbar will be rendered in this container. 
                <div id="toolbar-container"></div>
                 This container will become the editable. 
