printout for notes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <title>Quire - NoteBook</title>
      <link rel="stylesheet" href="styles/style.css"><!-- Main style -->
      <link rel="stylesheet" href="styles/menu.css"><!-- sidebar menu-->
+     <link rel="stylesheet" href="styles/print.css"><!--css för printout-->
      <script src="assets/index.js" defer></script><!-- Main js -->
      <!-- <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script> -->
      <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/balloon/ckeditor.js"></script>
@@ -52,7 +53,7 @@
                <h1>Saved Notes!</h1>
                <div class="allTitles"></div>
           </div>
-          <div id='right'>
+          <div id='right' class="subPage">
                <div id="info-text">
                     <h1>Welcome to Quire</h1>
                     <h6>Write your note!</h6>
