--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
      <title>Quire - NoteBook</title>
      <link rel="stylesheet" href="styles/style.css"><!-- Main style -->
      <link rel="stylesheet" href="styles/menu.css"><!-- sidebar menu-->
-     <link rel="stylesheet" href="styles/print.css"><!--css för printout-->
+     <link rel="stylesheet" href="styles/print.css">
+     <!--css för printout-->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js " defer></script>
      <script src="assets/index.js" defer></script><!-- Main js -->
      <!-- <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/decoupled-document/ckeditor.js"></script> -->
      <script src="https://cdn.ckeditor.com/ckeditor5/23.1.0/balloon/ckeditor.js"></script>
      <script src="assets/myCkeditor.js" defer></script><!-- The text-Editor js -->
      <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Noto+Sans+JP:wght@300&display=swap"
           rel="stylesheet">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js " defer></script>
+
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+     <!-- GoogleFonts For The CkEditor-Text-Templates-->
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
+
+
      <!--menu ikoner-->
 </head>
 
@@ -49,29 +63,39 @@
      <main>
           <div id="left">
                <h1>Saved Notes!</h1>
-               <input id="search-note" type="text">
-               <div id="allTitles"></div>
+               <div class="allTitles"></div>
           </div>
           <div id='right' class="subPage">
                <div id="info-text">
                     <h1>Welcome to Quire</h1>
-                    <h6>Write your note!</h6>
                </div>
-               <br>
-               <label>Title: </label>
-               <br>
-               <input type="text" id="note-title">
-               <br>
-               <br>
-               <label>Note:
-               </label>
+               <input type="text" id="note-title" placeholder="Title">
+               <div id="text-templates">
+                    <br>
+                    Choose Text Templates:
+                    <br>
+                    <label>Green Style</label>
+                    <input type="radio" id="template1" name="text-temp" value="temp1">
+                    <label>Prurple Style</label>
+                    <input type="radio" id="template2" name="text-temp" value="temp2">
+                    <label>Normal Style</label>
+                    <input type="radio" id="template3" name="text-temp" value="temp3">
+                    <label>Warring Style</label>
+                    <input type="radio" id="template4" name="text-temp" value="temp4">
+               </div>
 
-               <div id="editor">
+               <div id="editor" class="">
                </div>
-               <button id="save-btn">Save</button>
-               <button id="delete-btn">Delete</button>
+               <div>
+                    <button id="save-btn">Save</button>
+                    <button id="delete-btn">Delete</button>
+               </div>
+
+
+
+
           </div>
-          <div id="info"></div>
+          <div id="info" class="JAg Du Bla"></div>
      </main>
 </body>
 
