Removing save button inside notes. and other smaller fix.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
           </div>
-          <div id="info" class="JAg Du Bla"></div>
+          <div id="info"></div>
      </main>
 </body>
 
