Font-templates added + star for favorit and som other fix...

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </svg>
                </i>
           </a>
-          <a href="./" class="menu__item" data-tooltip="Search">
+          <a href="#" class="menu__item" data-tooltip="Search">
                <i class="material-icons">search</i>
           </a>
-          <a href="./" class="menu__item" data-tooltip="Favorites">
+          <a href="#" class="menu__item" data-tooltip="Favorites">
                <i class="material-icons">stars</i>
           </a>
           <a href="./" class="menu__item" data-tooltip="Statistics">
@@ -84,7 +84,12 @@
                     <label>Warring Style</label>
                     <input type="radio" id="template4" name="text-temp" value="temp4">
                </div>
-
+               <input id="star" type="checkbox" name="" value="" />
+               <svg class="my-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    preserveAspectRatio="xMidYMid" width="17" height="16" viewBox="0 0 17 16">
+                    <path
+                         d="M9 1L11.2857 6.71429H17L12.4286 10.7143L14.1429 17L9 13L3.85714 17L5.57143 10.7143L1 6.71429H6.71429L9 1Z" />
+               </svg>
                <div id="editor" class="">
                </div>
                <div>
@@ -96,7 +101,7 @@
 
 
           </div>
-          <div id="info" class="JAg Du Bla"></div>
+          <div id="info"></div>
      </main>
 </body>
 
