Image insert done

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                     <path
                          d="M9 1L11.2857 6.71429H17L12.4286 10.7143L14.1429 17L9 13L3.85714 17L5.57143 10.7143L1 6.71429H6.71429L9 1Z" />
                </svg>
+               <div class="imageInput">
+                    <div class="fileImageBtn">
+                        <input type="file" id="imageInput"  placeholder="Insert Image">
+                    </div>
+                    
+                    <div>
+                        <img id="imgPreview" src="" alt="Preview">
+                    </div>
+               </div>
+
                <div id="editor" class="">
                </div>
                <div>
