Modify function- auto saveing.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
     <main>
         <div id="left">
-            <input id="searchbar" placeholder="Search saved notes.." type="text" />
+            <input id="searchbar" placeholder="Search notes..." type="text" />
             <div class="allTitles"></div>
         </div>
         <div id='right' class="subPage">
