Modify function- auto saveing complete. Render Titles live on change

--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
             </div>
             <div>
                 <button id="save-btn">Save</button>
-                <button id="delete-btn">Delete</button>
-                <button id="update-btn">Update</button>
+                <button id="delete-btn" hide>Delete</button>
             </div>
             <div class="msg">
                 <!--    <div class="flexContainer" id="container">
