index.js bug fixes....

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <input type="radio" id="template4" name="text-temp" value="temp4">
             </div>
 
-            <input id="star" type="checkbox" />
+            <input id="star" type="checkbox" checked />
 
             <svg class="my-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 preserveAspectRatio="xMidYMid" width="17" height="16" viewBox="0 0 17 16">
