--- a/index.html
+++ b/index.html
@@ -91,18 +91,19 @@
                 <input type="radio" id="template4" name="text-temp" value="temp4">
             </div>
 
-            <input id="star" type="checkbox" checked />
+            <input id="star" type="checkbox" />
 
-            <svg class="my-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            <svg class="my-image hidden" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 preserveAspectRatio="xMidYMid" width="17" height="16" viewBox="0 0 17 16">
                 <path id="staritow"
                     d="M9 1L11.2857 6.71429H17L12.4286 10.7143L14.1429 17L9 13L3.85714 17L5.57143 10.7143L1 6.71429H6.71429L9 1Z" />
             </svg>
             <div id="editor" class="">
             </div>
-            <div>
-                <button id="save-btn">Save</button>
-                <button id="delete-btn" hide>Delete</button>
+            <div class="btns">
+                <!-- <button id="save-btn">Save</button> -->
+                <i id="delete-btn" class="material-icons">delete</i>
+                <!-- <button id="delete-btn" hide>delete</button> -->
             </div>
             <div class="msg">
                 <!--    <div class="flexContainer" id="container">
